# NeighborGIS-Analysis

./: .dockerignore  .gitignore  1_first_clean.R  Dockerfile  LICENSE  README.md  docker-compose.yml  example.env  first_clean.py  geocoding.py  pyproject.toml  requirements.txt  企劃書.md  專案架構.md
Input/: zoning_regu.shx
backend/: main.py
backend/api/: __init__.py  endpoints.py
backend/config/: consts.py  load_config.py
backend/database/: connect.py  load_data.py
backend/handlers/: generate_floor_handler.py  intersect_handler.py  nearby_analysis_handler.py  poi_handler.py  points_compare_handler.py
backend/llm/: __init__.py  llm.py  llm_config.py
backend/router/: __init__.py  api.py  page.py  router.py
backend/routers/: api.py  page.py  router.py
backend/services/: __init__.py  first_clean.py  floor_generate.py  geocoding.py  intersect.py  nearby_analysis.py  poi.py  points_compare.py
backend/static/: __init__.py
backend/structs/: __init__.py  adress_point.py  api_response.py  zoing.py
backend/utils/: __init__.py  cache.py  safe_extract.py
frontend/: index.html  package-lock.json  package.json
frontend/assets/: anti_cache.js  chain1.js  left_right_btn.js  progress_bar.js  record_list.js  required_input.js  style.css  switch_page.js
frontend/src/: anti_cache.js  chain1.js  custom_poi_styles.css  dom.js  floor_plan.js  left_right_btn.js  main.js  poi.css  poi_enhancements.css  poi_improvements.css  progress_bar.js  record_list.js  required_input.js  style.css  switch_page.js
scripts/: 1_first_clean.R  POI500公尺.R  poi.html  poi.py
(+9 files in other folders)
