[project]
name = "neighborgis-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "folium>=0.19.6",
    "geoalchemy2>=0.17.1",
    "geopandas>=1.0.1",
    "geopy>=2.4.1",
    "langchain-ollama>=0.3.3",
    "matplotlib>=3.10.3",
    "osmnx>=2.0.3",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "pydotenv>=0.0.7",
    "shapely>=2.1.0",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.2",
]
